# Databridge_AI

./: .env.example  .gitignore  .mcp.json  CHANGELOG_REFERENCE.md  CLAUDE.md  CONTRIBUTING.md  Cortex_AI_Integration_Strategy.md  Cortex_AI_Interactive_Guide.html  Databridge_AI_UI_Wireframe.html  GEMINI.md  GEMINI_RENAME_FIXES.md  GEMINI_RENAME_ISSUES.md  LICENSE  MCP_and_Excel_Plugin_Recommendation.md  PRODUCT_RECOMMENDATIONS.md  README.md  Snowflake_Semantic_Views_Research.md  ai_sql_orchestrator_standalone.py  analyze_sql_hierarchy.py  ask_claude_gemini.py  claude_desktop_config.example.json  competitive_analysis.md  control-center.html  development_log.md  expand_mappings_with_coa.py  mcp_test_client.py  pyproject.toml  pytest.ini  requirements.txt  run_mcp.py  run_mcp_server.bat  run_server.py  run_ui.py  server.py  smart_sql_analyzer.py  start_services.py  sync_hierarchies.js  test_ai_sql_analysis.py  test_enrichment_workflow.py  test_los_full_analysis.py  (+8 more)
Book/: README.md  pyproject.toml
Book/.github/workflows/: ci.yml
Book/book/: __init__.py  actions.py  ai_agent.py  ai_agent_config.py  formula_engine.py  formulas.py  graph_db.py  hierarchy.py  linked_book.py  logger.py  management.py  models.py  properties.py  vector_db.py
Book/book/connectors/: __init__.py  csv_connector.py  json_connector.py
Book/book/dbt_integration/: __init__.py  manifest_parser.py  project.py
Book/book/great_expectations_integration/: __init__.py  generator.py  validator.py
Book/docs/: COMPETITIVE_ANALYSIS.md  FUNCTIONAL_COMPARISON.md  REUSABLE_COMPONENTS.md  STRATEGIC_ENHANCEMENTS.md  TOOL_COMPARISON_ANALYSIS.md  USAGE.md  USE_CASES.md  VALUE_PROPOSITION.md  index.md
Book/documentation/: 01_what_is_a_book.md  02_creating_your_first_book.md  03_adding_magic_with_formulas.md  04_the_smart_assistant.md  05_saving_and_loading.md  06_the_big_picture.md  PHASE_1_4_GUIDE.md  README.md
Book/skills/: animal-expert.json  entity-extractor.json  financial-analyst.json  index_skills.py  pricing-analyst.json  skill_embeddings.json
Book/tests/: test_book.py  test_new_integrations.py
Book/use_cases/01_financial_report/: README.md  build_report.py
Book/use_cases/02_ai_coa_mapping/: README.md  map_coa.py  new_coa.csv
Book/use_cases/03_data_reconciliation/: README.md  reconcile.py  source_a.csv  source_b.csv
Book/use_cases/04_hierarchical_aggregation/: README.md  aggregate.py  global_sales.csv
Book/use_cases/05_variance_analysis/: README.md  budget.csv  download_sec_data.py  run_analysis.py  setup_librarian.py
Book/use_cases/06_asset_hierarchy/: README.md  asset_inventory.csv  run_management.py  setup_librarian.py
Book/use_cases/07_data_quality_monitoring/: README.md  product_data.csv  run_quality_check.py
Book/use_cases/08_dynamic_pricing/: README.md  product_catalog.csv  run_pricing_suggestions.py
Book/use_cases/09_supply_chain_optimization/: README.md  run_analysis.py  setup_librarian.py  supply_chain_data.csv
Book/use_cases/10_master_data_management/: README.md  customer_master.csv  run_mdm_operations.py  setup_librarian.py
Book/use_cases/11_anomaly_detection/: README.md  monthly_sales.csv  run_anomaly_detection.py
Book/use_cases/12_knowledge_graph/: README.md  build_knowledge_graph.py  news_article.txt
Book/use_cases/13_version_control_and_auditing/: README.md  run_versioning_workflow.py  setup_librarian.py
Book/use_cases/14_customer_360/: README.md  billing_data.csv  crm_data.csv  run_integration.py
Book/use_cases/15_interactive_exploration/: README.md  interactive_session.py  server_inventory.csv
Book/use_cases/16_dbt_model_generation/: README.md  generate_dbt_model.py  setup_librarian.py
Book/use_cases/17_dynamic_report_generation/: README.md  generate_report.py  node.html  report_template.html  trial_balance.csv
Book/use_cases/18_cdc_reconciliation/: README.md  initial_inventory.csv  inventory_cdc_log.csv  run_cdc_reconciliation.py
Book/use_cases/19_multi_layered_reporting/: README.md  detailed_trial_balance.csv  generate_multi_layered_report_py.md
Book/use_cases/20_financial_consolidation/: README.md  run_consolidation.py  setup_librarian.py  subsidiary_a_trial_balance.csv  subsidiary_b_trial_balance.csv
Book/use_cases/21_vector_powered_agent/: README.md  run_ai_suggestions.py
Book/use_cases/22_persistent_graph_db/: README.md  run_persistent_graph.py
Book/use_cases/23_promote_to_librarian/: README.md  promote_to_librarian.py
Book/use_cases/24_checkout_from_librarian/: README.md  checkout_from_librarian.py
Book/use_cases/25_nl_to_sql/: README.md  nl_to_sql.py
Book/use_cases/26_mcp_server/: README.md  mcp_server.py
Book/use_cases/27_meta_agent_orchestrator/: README.md  meta_agent.py
Book/use_cases/28_dbt_integration/: README.md  run_dbt_integration.py
Book/use_cases/29_great_expectations_integration/: README.md  run_ge_integration.py
Book/use_cases/tutorial_1_book_fundamentals/: README.md  run_tutorial.py
Book/use_cases/tutorial_2_persistence_graph/: README.md  run_tutorial.py
Book/use_cases/tutorial_3_librarian_workflow/: README.md  run_tutorial.py
Book/use_cases/tutorial_4_meta_agent_mcp/: README.md  run_tutorial.py
Book/use_cases_for_kids/01_pokemon_collection/: README.md  pokemon.csv
Book/use_cases_for_kids/02_birthday_party_planner/: README.md  todo_list.csv
apps/databridge-cli/: README.md  pyproject.toml
apps/databridge-librarian/: .dockerignore  .env.example  Dockerfile  PLAN.md  README.md  USER_GUIDE.md  WHITEPAPER_RECOMMENDATIONS.md  pyproject.toml  requirements-dev.txt  requirements-optional.txt  requirements.txt  run_mcp.py  test_data_viewer.py
apps/databridge-librarian/data/: .gitkeep  (+4 more)
apps/databridge-v4/: FPA_WORKFLOW.md  pyproject.toml  requirements.txt
databridge-ai-examples/: LICENSE  README.md  pyproject.toml
databridge-ai-examples/src/: __init__.py
databridge-pro/: LICENSE  README.md  pyproject.toml
databridge-pro/src/: __init__.py
libs/databridge-core/: README.md  pyproject.toml
libs/databridge-discovery/: README.md  pyproject.toml
libs/databridge-models/: README.md  pyproject.toml
(+1223 files in other folders)
