[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "databridge-ai"
version = "3.0.0"
description = "DataBridge AI - Unified Data Reconciliation and Analytics Platform"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "DataBridge AI Team"}
]
keywords = ["data", "reconciliation", "analytics", "hierarchy", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "databridge-core",
    "databridge-models",
]

[project.optional-dependencies]
v3 = ["databridge-v3"]
v4 = ["databridge-v4"]
cli = ["databridge-cli"]
all = [
    "databridge-v3",
    "databridge-v4",
    "databridge-cli",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
databridge = "databridge_cli.main:main_app"

[tool.hatch.build.targets.wheel]
packages = ["apps", "libs"]

# Workspace configuration for local development
[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-all = "pytest apps/ libs/ {args}"
cov = "pytest --cov=apps --cov=libs {args:tests}"

# Ruff configuration (shared linting)
[tool.ruff]
line-length = 120
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.isort]
known-first-party = ["databridge_core", "databridge_models", "databridge_v3", "databridge_v4", "databridge_cli"]

# MyPy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "apps/databridge-v3/tests",
    "apps/databridge-v4/tests",
    "libs/databridge-core/tests",
    "libs/databridge-models/tests",
]
asyncio_mode = "auto"

# Coverage configuration
[tool.coverage.run]
source = ["apps", "libs"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
