[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "databridge-ai-examples"
version = "0.39.0"
description = "DataBridge AI Examples & Tests - Use-case tutorials and test suites for DataBridge AI"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [
    {name = "DataBridge AI Team", email = "support@databridge.ai"}
]
keywords = [
    "data", "reconciliation", "examples", "tests", "tutorials",
    "mcp", "hierarchy", "financial", "data-quality"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Database",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "databridge-ai>=0.39.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.optional-dependencies]
pro = [
    "databridge-ai-pro>=0.39.0",
]

[project.urls]
Homepage = "https://databridge.ai/examples"
Documentation = "https://databridge.ai/docs/examples"
Support = "https://databridge.ai/support"

[project.entry-points."databridge.plugins"]
examples = "databridge_ai_examples:register_examples"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
]
exclude = [
    "*.pyc",
    "__pycache__",
    ".git",
    ".pytest_cache",
    "*.egg-info",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

# Rename src to databridge_ai_examples for the wheel
[tool.hatch.build.targets.wheel.sources]
"src" = "databridge_ai_examples"

[tool.pytest.ini_options]
testpaths = ["src/tests"]
asyncio_mode = "auto"
