[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "databridge-core"
version = "1.0.0"
description = "DataBridge AI Core - Shared utilities for config, database, CLI, and MCP"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "DataBridge AI Team"}
]

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "rich>=13.0",
    "typer>=0.9",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
mcp = ["fastmcp>=0.1"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/databridge_core"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]
