[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "databridge-discovery"
version = "1.0.0"
description = "DataBridge AI Model Discovery Engine - Automated SQL parsing, CASE extraction, and hierarchy generation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "DataBridge AI Team"}
]

dependencies = [
    "sqlglot>=20.0",
    "networkx>=3.0",
    "databridge-core",
    "databridge-models",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pandas>=2.0",
    "rapidfuzz>=3.0",
]

[project.optional-dependencies]
embeddings = [
    "sentence-transformers>=2.2",
    "chromadb>=0.4",
]
mcp = [
    "fastmcp>=0.1",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
]
all = [
    "databridge-discovery[embeddings,mcp,dev]",
]

[tool.hatch.build.targets.wheel]
packages = ["src/databridge_discovery"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
