[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "databridge-models"
version = "1.0.0"
description = "DataBridge AI Models - Shared data models, enums, and schemas"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "DataBridge AI Team"}
]

dependencies = [
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/databridge_models"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]
